--- a/src/Components/Common/VerifyEmail.css
+++ b/src/Components/Common/VerifyEmail.css
@@ -1,4 +1,5 @@
 .verifyEmail {
+    color: #000;
     width: 90%;
     max-width: 500px;
     box-shadow: 0px 0px 4px hsl(210, 12%, 75%);
@@ -17,7 +18,7 @@
   }
   
   .verifyEmail > span{
-    color: gray;
+    color: rgb(0, 0, 0);
   }
   
   .verifyEmail > button {
